fix font sizing and spacing sitewide

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -15,21 +15,20 @@
   width: 100%;
 }
 
-h1 {
+.about-container h1 {
+  font-size: 3rem;
   font-family: 'Space Mono', monospace;
-}
-
-.timeline {
-
 }
 
 .about-container h2 {
   font-family: 'Space Mono', monospace;
+  font-size: 2rem;
   border-bottom: 1px solid green;
 }
 
-p {
+.about-container p {
   font-family: 'Space Mono', monospace;
+  font-size: 1.25rem;
 }
 
 .hidden-left {
