--- a/src/components/Systems/systems.css
+++ b/src/components/Systems/systems.css
@@ -5,6 +5,12 @@
   flex-direction: column;
 }
 
+.systems-container h1 {
+  font-size: 3rem;
+  margin-bottom: 5vw;
+  font-family: 'Space Mono', monospace;
+}
+
 .systems-item {
   display: flex;
   justify-content: center;
@@ -17,7 +23,8 @@
 }
 
 .systems-paragraph {
-  padding: 40px;
-  /* font-size: 2rem; */
+  font-family: 'Space Mono', monospace;
+  padding: 5vw;
+  font-size: 1.5rem;
   margin: 0;
 }
